# conviso-mcp

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ast.yml  release.yml
node/: Dockerfile  LICENSE  README.md  manifest.json  package-lock.json  package.json
node/scripts/: generate_mutation_catalog.mjs  smoke.mjs
node/src/conviso_mcp/: feed_gateway.js  filters.js  graphql_client.js  mutations.js  mutations_catalog.json  operation_allowlist.js  server.js
node/test/: assets_variables.test.js  curated_mutations.test.js  describe_mutation.test.js  execute_mutation.test.js  filters.test.js  issues_variables.test.js  mutations_catalog.test.js  projects_variables.test.js  server_handshake.test.js  top_vulns_variables.test.js
python/: Dockerfile  pyproject.toml  requirements.txt
python/src/conviso_mcp/: feed_gateway.py  filters.py  graphql_client.py  server.py
python/tests/: smoke_live.py  test_assets_variables.py  test_filters.py  test_issues_variables.py  test_projects_variables.py  test_top_vulns_variables.py
src/conviso_mcp/: feed_gateway.py  graphql_client.py  server.py
